# rag-eval-lab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample_dataset.json
src/rag_evals/: __init__.py  cli.py  metrics.py  runner.py
tests/: test_metrics.py  test_runner.py
