[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-evals-lab"
version = "0.1.0"
description = "Evaluation harness for RAG retrieval and answer quality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rag-evals = "rag_evals.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
